🐛 BUG FIX - Dowload button mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -196,11 +196,9 @@ button {
 
 #downloadCOVERButton {
 	position: absolute;
-	bottom: 0;
 	width: 100vw;
 	grid-column: 1 / 3;
 	background-color: white;
-	border-top: 1px solid black;
 }
   
 .download-button {
@@ -303,4 +301,5 @@ button {
 	.download-section {
 		border-top: 0;
 	}
+
 }
